--- a/lib/macaw/i18n/ru.yml
+++ b/lib/macaw/i18n/ru.yml
@@ -1,21 +1,21 @@
 ---
 ru:
   log:
-    WelcomeMessage: "Добро пожаловать в arara %{0}!"
-    ProcessingFile: "Обработка файла '%{file}', пожалуйста, подождите."
+    WelcomeMessage: "Добро пожаловать в macaw %{0}!"
+    ProcessingFile: Обработка файла "%{file}", пожалуйста, подождите.
     Done: "Завершено."
-    ExceptionRaised: 'Arara выдала исключение со следующим сообщением:'
+    ExceptionRaised: 'Macaw выдала исключение со следующим сообщением:'
     ReadyToRunCommands: "Готов к запуску команд."
-    CommandName: "Выполнение ''%{0}''."
+    CommandName: Выполнение "%{0}".
     Command: "Команда: %{0}"
-    CommandSuccess: "''%{0}'' была успешно выполнена."
-    CommandFailure: "''%{0}'' завершилась неудачей."
+    CommandSuccess: '"%{0}" была успешно выполнена.'
+    CommandFailure: '"%{0}" завершилась неудачей.'
     AllCommandsSuccess: "Все команды были успешно выполнены."
     OutputLogging: "Журнал вывода:"
-    CommandNotFound: "''%{0}'' не найдена в пути. Попытка выполнения: %{1}"
+    CommandNotFound: '"%{0}" не найдена в пути. Попытка выполнения: %{1}'
     DirectiveFound: "Директива найдена в строке %{0} с %{1}."
-    RuleFound: "Задача ''%{0}'' найдена в ''%{1}''."
-    NoDirectivesFound: "Ни одной директивы не найдено в ''%{0}''."
+    RuleFound: Задача "%{0}" найдена в "%{1}".
+    NoDirectivesFound: Ни одной директивы не найдено в "%{0}".
   help:
     Version: "показать версию приложения"
     Help: "показать справочное сообщение"
@@ -25,14 +25,16 @@ ru:
     Language: "установить язык приложения"
     DryRun: "пройти через все инструкции выполнения команды, но без реальных вызовов"
     MaximumNumberOfLoops: "установить максимальное число циклов"
+    Usage: Usage
+    Progress: Print dots to mark progress
   header:
     Slogan: "Крутой инструмент автоматизации TeX"
     AllRightsReserved: "Все права защищены."
   msg:
-    NoDirectivesFound: "Я не могу найти ни одной директивы в '%{file}', и поэтому не
-      могу ничего выполнить. Это действительно то, что вы хотели?"
-    SpecialThanks: "Особая благодарность выражается %{contributors} и многим другим, благодаря кому
-      стало возможным создание этого скромного инструмента."
+    NoDirectivesFound: Я не могу найти ни одной директивы в "%{file}", и поэтому не
+      могу ничего выполнить. Это действительно то, что вы хотели?
+    SpecialThanks: "Особая благодарность выражается %{contributors} и многим другим,
+      благодаря кому стало возможным создание этого скромного инструмента."
     RunningCommand: "Выполнение %{0}..."
     Success: "УСПЕШНО"
     Failure: "НЕУДАЧА"
@@ -42,35 +44,35 @@ ru:
     Problem: "Проблема: %{0}"
     ErrorLocation: "Ошибка в строке %{0} позиции %{1}."
   error:
-    FileDoesNotExistWithExtensionsList: "К сожалению, файл ''%{0} %{1}'' не существует.
+    FileDoesNotExistWithExtensionsList: К сожалению, файл "%{0} %{1}" не существует.
       Обратите внимание, что когда вы указываете только базовое имя (т.е., имя файла
-      без расширения) или имя с неизвестным расширением, arara пытается найти файлы
+      без расширения) или имя с неизвестным расширением, macaw пытается найти файлы
       с предопределенными расширениями %{1} в этом порядке. Вы можете переопределить
       порядок, образец поиска или даже добавить поддержку новых расщирений через файл
-      конфигурации. Пожалуйста, обратитесь к руководству arara, что бы узнать больше
-      об этой возможности."
-    FileDoesNotExist: "Файл '%{file}' не существует."
-    CommandNotFound: "= \\nК сожалению, команда из задачи ''%{0}'' не найдена. Вы
-      уверены, что команда ''%{1}'' корректна или же доступна из системного пути?"
-    InvalidYAMLConfigurationFile: "К сожалению, ваш файл конфигурации arara, по всей
+      конфигурации. Пожалуйста, обратитесь к руководству macaw, что бы узнать больше
+      об этой возможности.
+    FileDoesNotExist: Файл "%{file}" не существует.
+    CommandNotFound: "= \nК сожалению, команда из задачи \"%{0}\" не найдена. Вы уверены,
+      что команда \"%{1}\" корректна или же доступна из системного пути?"
+    InvalidYAMLConfigurationFile: "К сожалению, ваш файл конфигурации macaw, по всей
       видимости, неверен, то есть в нем содержатся недопустимые или пропущенные записи
-      YAML. К сожалению, arara не может продолжить работу, пока ошибка не будет исправлена​​.
+      YAML. К сожалению, macaw не может продолжить работу, пока ошибка не будет исправлена​​.
       Я старался изо всех сил, чтобы получить сообщение об ошибке, итак, вот оно:"
     InvalidConfigurationFile: "Ой-ой, конфигурационный файл, кажется, неверен. Вы
-      уверены, что это правильный файл YAML? К сожалению, arara не может продолжить
+      уверены, что это правильный файл YAML? К сожалению, macaw не может продолжить
       работу, пока не будет предоставлен корректный файл конфигурации."
     InvalidLanguageConfigurationFile: "Хьюстон, у нас проблема. К сожалению, язык,
       установленный в файле конфигурации не является допустимым. В настоящее время
-      arara может предоставить поддержку следующих языков: %{languages}. Удостоверьтесь, что
-      выбран допустимый язык или запись удалена из конфигурационного файла (поле не
-      является обязательным), в противном случае arara не сможет продолжить работу."
+      macaw может предоставить поддержку следующих языков: %{languages}. Удостоверьтесь,
+      что выбран допустимый язык или запись удалена из конфигурационного файла (поле
+      не является обязательным), в противном случае macaw не сможет продолжить работу."
     InvalidFiletypesConfigurationFile: "К сожалению, видимо, в вашем файле конфигурации
       содержатся специализированные типы файлов без определения расширения и образца.
       И то и другое необходимо для продолжения работы. Пожалуйста, исправьте эту ошибку
       в вашем файле конфигурации и повторите попытку."
-    PathRuntimeErrorConfigurationFile: "К сожалению, один из элементов пути поиска
+    PathRuntimeErrorConfigurationFile: 'К сожалению, один из элементов пути поиска
       в вашем файле конфигурации содержит недоступную переменную в контексте пути:
-      ''%{0}''"
+      "%{0}"'
     PathIOErrorConfigurationFile: "К сожалению, один из элементов пути поиска в вашем
       файле конфигурации содержит неправильную структуру каталогов. Не могли бы вы
       взглянуть на это?"
@@ -78,82 +80,80 @@ ru:
       значит, что директива может содержать синтаксическую ошибку YAML или неверное
       поле. Я старался изо всех сил, чтобы получить сообщение об ошибке, итак, вот
       оно:"
-    DirectiveEmptyCurlyBrackets: "Директива ''%{0}'' в строке %{1} содержит пустые
-      фигурные скобки. Обратите внимание на то, что arara выбирает более простой синтаксис,
+    DirectiveEmptyCurlyBrackets: Директива "%{0}" в строке %{1} содержит пустые фигурные
+      скобки. Обратите внимание на то, что macaw выбирает более простой синтаксис,
       когда у директивы отсутствуют параметры. Чтобы исправить это, достаточно либо
-      удалить фигурные скобки, либо предоставить директиве аргументы."
-    DirectiveInvalidArgumentList: "Директива ''%{0}'' в строке %{1} содержит неверный
-      тип аргумента. Аргумент ''%{2}'' является зарезервированным ключевым словом
-      arara и всегда должен быть списком."
-    DirectiveReservedKeyword: "Директива ''%{0}'' в строке %{1} содержит неверное
-      имя аргумента. Имя ''%{2}'' является зарезервированным ключевым словом arara,
-      представляющее элемент в списке ''%{3}''. Пожалуйста, выберите другое имя для
-      этого аргумента."
-    DirectiveListError: "Директива ''%{0}'' в строке %{1} содержит неверный тип аргумента.
-      Только аргументы ''files'' и ''items'' могут содержать списки. Оба являются
-      зарезервированными ключевыми словоми arara."
+      удалить фигурные скобки, либо предоставить директиве аргументы.
+    DirectiveInvalidArgumentList: Директива "%{0}" в строке %{1} содержит неверный
+      тип аргумента. Аргумент "%{2}" является зарезервированным ключевым словом macaw
+      и всегда должен быть списком.
+    DirectiveReservedKeyword: Директива "%{0}" в строке %{1} содержит неверное имя
+      аргумента. Имя "%{2}" является зарезервированным ключевым словом macaw, представляющее
+      элемент в списке "%{3}". Пожалуйста, выберите другое имя для этого аргумента.
+    DirectiveListError: Директива "%{0}" в строке %{1} содержит неверный тип аргумента.
+      Только аргументы "files" и "items" могут содержать списки. Оба являются зарезервированными
+      ключевыми словоми macaw.
     InvalidDirective: "Видимо, в строке %{0} неверная директива. Пожалуйста, обратите
       внимание и исправьте ее."
-    DirectiveGenericError: "Директива ''%{0}'' в строке %{1}, кажется, имеет неверный
+    DirectiveGenericError: Директива "%{0}" в строке %{1}, кажется, имеет неверный
       формат. Это может быть следствием синтаксической ошибки YAML или неправильного
-      отображения."
+      отображения.
     InvalidLanguage: "К сожалению, выбранный вами код языка является неверным. В настоящее
       время поддерживаются следующие языки:"
-    RuleNotFound: "Ой-ой, я не смог найти ''%{0}'' правило в каталоге поиска. Не могли
-      бы вы проверить, верно ли задано имя правила и доступно ли оно в каталоге поиска?"
-    InvalidYAMLRule: "Похоже, задача ''%{0}'' содержит синтаксическую ошибку YAML
-      или неверное поле. Не могли бы вы взглянуть на файл ''%{0}.yaml'', расположенный
-      в ''%{1}''. Я старался изо всех сил, чтобы получить сообщение об ошибке, итак,
-      вот оно:"
-    InvalidRule: "Ой-ой, похоже, задача ''%{0}'' является неверной. Вы уверены, что
-      файл ''%{0}.yaml'', расположенный в ''%{1}'', является правильным YAML файлом?"
-    EmptyIdentifierRule: "В задаче ''%{0}'' была обнаружена проблема. В файле ''%{0}.yaml'',
-      расположенном в ''%{1}'', требуется верный идентификатор. Не могли бы вы это
-      исправить?"
-    EmptyNameRule: "В задаче ''%{0}'' была обнаружена проблема. В файле ''%{0}.yaml'',
-      расположенном в ''%{1}'', требуется верное имя. Не могли бы вы это исправить?"
-    ForbiddenIdentifierRule: "Ой-ой, в задаче ''%{0}'' (ссылающейся на файл ''%{0}.yaml'',
-      расположенный в ''%{1}'') содержится неправильный идентификатор аргумента. Идентификатор
-      ''%{2}'' является зарезервированным ключевым словом, поэтому не может быть использован.
-      Не могли бы вы использовать другое имя?"
-    EmptyArgumentsListRule: "В задаче ''%{0}'' была обнаружена проблема. В файле ''%{0}.yaml'',
-      расположенном в ''%{1}'', требуется верный список аргументов. Не могли бы вы
-      это исправить? Обратите внимание, что список аргументов также может быть пустым,
-      но для этого необходимо определить его явно (с помощью ''arguments: []'')."
-    WrongIdentifierRule: "Ой-ой, в задаче ''%{0}'' (ссылающейся на файл ''%{0}.yaml'',
-      расположенный в ''%{1}'') содержится неправильный идентификатор - ''%{0}'' ожидалось,
-      а не ''%{2}''. Не могли бы вы это исправить?"
-    ArgumentsNotDefinedInRule: "О нет, некоторые аргументы, используемые в директиве
-      ''%{0}'', не определены в правиле ''%{0}.yaml'', расположенном в ''%{1}''. Вы
-      можете или удалить их из директивы ''%{0}'', или добавить в список аргументов
-      правила ''%{0}.yaml''. Вот они: %{2}"
-    DefaultValueRuntimeErrorRule: "К сожалению, значение по умолчанию, установленное
-      для аргумента ''%{0}'' задачи ''%{1}'' (ссылающейся на файл ''%{1}.yaml'', расположенный
-      в ''%{2}'') имеет недоступную переменную / метод в контексте правила: ''%{3}''"
-    FlagRuntimeErrorRule: "К сожалению, флаг, установленный для аргумента ''%{0}''
-      задачи ''%{1}'' (ссылающейся на файл ''%{1}.yaml'', расположенный в ''%{2}'')
-      имеет недоступную переменную / метод в контексте правила: ''%{3}''"
-    DuplicatedCommandElementsRule: "Ой-ой, оба поля ''command'' и ''commands'' установлены
-      в задаче ''%{0}'' (ссылающейся на файл ''%{0}.yaml'', расположенный в ''%{1}'').
-      Вы должны выбрать только одно из них. Если ваша задача полагается только на
-      одну команду, вы можете выбрать ''command'', если ваше правило требует набора
-      команд, поле ''commands'' является, может быть, более подходящим."
-    MissingCommandElementsRule: "Ой-ой, в задаче ''%{0}'' (ссылающейся на файл ''%{0}.yaml'',
-      расположенный в ''%{1}'') ни один из элементов ''command'' или ''commands''
-      не определен. Вы должны выбрать только один из них. Если ваша задача полагается
-      только на одну команду, вы можете выбрать ''command'', если ваше правило требует
-      набора команд, поле ''commands'' является, может быть, более подходящим."
-    CommandRuntimeErrorRule: "К сожалению, команда, установленная для задачи ''%{0}''
-      (ссылающейся на файл ''%{0}.yaml'', расположенный в ''%{1}'') имеет недоступную
-      переменную / метод в контексте правила: ''%{2}''"
-    XMLFileNotFound: "К сожалению, я не смог найти ''%{0}'' в текущем каталоге."
-    XMLBadEncoding: "К сожалению, видимо ''%{0}'' имеет неверную кодировку. Удалите
-      файл и попытайтесь еще раз."
-    XMLMalformedFile: "К сожалению, ''%{0}'' выглядет некорректным. Удалите файл и
-      попытайтесь еще раз."
-    XMLAccess: "К сожалению, невозможно получить доступ к ''%{0}''. Пожалуйста, проверьте
-      права дирректории и попытайтесь еще раз."
+    RuleNotFound: Ой-ой, я не смог найти "%{0}" правило в каталоге поиска. Не могли
+      бы вы проверить, верно ли задано имя правила и доступно ли оно в каталоге поиска?
+    InvalidYAMLRule: 'Похоже, задача "%{0}" содержит синтаксическую ошибку YAML или
+      неверное поле. Не могли бы вы взглянуть на файл "%{0}.yaml", расположенный в
+      "%{1}". Я старался изо всех сил, чтобы получить сообщение об ошибке, итак, вот
+      оно:'
+    InvalidRule: Ой-ой, похоже, задача "%{0}" является неверной. Вы уверены, что файл
+      "%{0}.yaml", расположенный в "%{1}", является правильным YAML файлом?
+    EmptyIdentifierRule: В задаче "%{0}" была обнаружена проблема. В файле "%{0}.yaml",
+      расположенном в "%{1}", требуется верный идентификатор. Не могли бы вы это исправить?
+    EmptyNameRule: В задаче "%{0}" была обнаружена проблема. В файле "%{0}.yaml",
+      расположенном в "%{1}", требуется верное имя. Не могли бы вы это исправить?
+    ForbiddenIdentifierRule: Ой-ой, в задаче "%{0}" (ссылающейся на файл "%{0}.yaml",
+      расположенный в "%{1}") содержится неправильный идентификатор аргумента. Идентификатор
+      "%{2}" является зарезервированным ключевым словом, поэтому не может быть использован.
+      Не могли бы вы использовать другое имя?
+    EmptyArgumentsListRule: 'В задаче "%{0}" была обнаружена проблема. В файле "%{0}.yaml",
+      расположенном в "%{1}", требуется верный список аргументов. Не могли бы вы это
+      исправить? Обратите внимание, что список аргументов также может быть пустым,
+      но для этого необходимо определить его явно (с помощью "arguments: []").'
+    WrongIdentifierRule: Ой-ой, в задаче "%{0}" (ссылающейся на файл "%{0}.yaml",
+      расположенный в "%{1}") содержится неправильный идентификатор - "%{0}" ожидалось,
+      а не "%{2}". Не могли бы вы это исправить?
+    ArgumentsNotDefinedInRule: 'О нет, некоторые аргументы, используемые в директиве
+      "%{0}", не определены в правиле "%{0}.yaml", расположенном в "%{1}". Вы можете
+      или удалить их из директивы "%{0}", или добавить в список аргументов правила
+      "%{0}.yaml". Вот они: %{2}'
+    DefaultValueRuntimeErrorRule: 'К сожалению, значение по умолчанию, установленное
+      для аргумента "%{0}" задачи "%{1}" (ссылающейся на файл "%{1}.yaml", расположенный
+      в "%{2}") имеет недоступную переменную / метод в контексте правила: "%{3}"'
+    FlagRuntimeErrorRule: 'К сожалению, флаг, установленный для аргумента "%{0}" задачи
+      "%{1}" (ссылающейся на файл "%{1}.yaml", расположенный в "%{2}") имеет недоступную
+      переменную / метод в контексте правила: "%{3}"'
+    DuplicatedCommandElementsRule: Ой-ой, оба поля "command" и "commands" установлены
+      в задаче "%{0}" (ссылающейся на файл "%{0}.yaml", расположенный в "%{1}"). Вы
+      должны выбрать только одно из них. Если ваша задача полагается только на одну
+      команду, вы можете выбрать "command", если ваше правило требует набора команд,
+      поле "commands" является, может быть, более подходящим.
+    MissingCommandElementsRule: Ой-ой, в задаче "%{0}" (ссылающейся на файл "%{0}.yaml",
+      расположенный в "%{1}") ни один из элементов "command" или "commands" не определен.
+      Вы должны выбрать только один из них. Если ваша задача полагается только на
+      одну команду, вы можете выбрать "command", если ваше правило требует набора
+      команд, поле "commands" является, может быть, более подходящим.
+    CommandRuntimeErrorRule: 'К сожалению, команда, установленная для задачи "%{0}"
+      (ссылающейся на файл "%{0}.yaml", расположенный в "%{1}") имеет недоступную
+      переменную / метод в контексте правила: "%{2}"'
+    XMLFileNotFound: К сожалению, я не смог найти "%{0}" в текущем каталоге.
+    XMLBadEncoding: К сожалению, видимо "%{0}" имеет неверную кодировку. Удалите файл
+      и попытайтесь еще раз.
+    XMLMalformedFile: К сожалению, "%{0}" выглядет некорректным. Удалите файл и попытайтесь
+      еще раз.
+    XMLAccess: К сожалению, невозможно получить доступ к "%{0}". Пожалуйста, проверьте
+      права дирректории и попытайтесь еще раз.
     ConditionalNotBoolean: "К сожалению, следующее условие не приводится к логическому
       значению. Пожалуйста, перепишите его и попробуйте еще раз:"
-    ConditionalRuntimeError: "К сожалению, одно из условий содержит неизвестную переменную
-      в контексте выполнения: ''%{0}''"
+    ConditionalRuntimeError: 'К сожалению, одно из условий содержит неизвестную переменную
+      в контексте выполнения: "%{0}"'
