--- a/lib/macaw/i18n/it.yml
+++ b/lib/macaw/i18n/it.yml
@@ -2,21 +2,21 @@
 it:
   log:
     WelcomeMessage: ''
-    ProcessingFile: Sto elaborando il file ''%{0}'', attendi.
+    ProcessingFile: Sto elaborando il file "%{file}", attendi.
     Done: Done.
-    ExceptionRaised: 'Arara ha sollevato un''eccezione con il seguente messaggio:'
+    ExceptionRaised: 'Macaw ha sollevato un''eccezione con il seguente messaggio:'
     ReadyToRunCommands: Pronto a eseguire comandi.
-    CommandName: Sto eseguendo ''%{0}''.
+    CommandName: Sto eseguendo "%{0}".
     Command: 'Comando: %{0}'
-    CommandSuccess: "''%{0}'' è stato eseguito con successo."
-    CommandFailure: "''%{0}'' ha emesso uno stato di errore."
+    CommandSuccess: '"%{0}" è stato eseguito con successo.'
+    CommandFailure: '"%{0}" ha emesso uno stato di errore.'
     AllCommandsSuccess: Tutti i comandi sono stati eseguiti con successo.
     OutputLogging: 'Resoconto dell''output:'
-    CommandNotFound: "''%{0}'' non è stato trovato nel ''path''. Tentativo di esecuzione:
-      %{1}"
+    CommandNotFound: '"%{0}" non è stato trovato nel "path". Tentativo di esecuzione:
+      %{1}'
     DirectiveFound: Direttiva trovata alla riga %{0} con %{1}.
-    RuleFound: Compito ''%{0}'' trovato in ''%{1}''.
-    NoDirectivesFound: Non ho trovato direttive in ''%{0}''.
+    RuleFound: Compito "%{0}" trovato in "%{1}".
+    NoDirectivesFound: Non ho trovato direttive in "%{0}".
   help:
     Version: stampa la versione dell'applicazione
     Help: stampa il messaggio di aiuto
@@ -26,18 +26,16 @@ it:
     Language: imposta la lingua dell'applicazione
     DryRun: ''
     MaximumNumberOfLoops: ''
+    Usage: Usage
+    Progress: Print dots to mark progress
   header:
     Slogan: The cool TeX automation tool
     AllRightsReserved: Tutti i diritti riservati.
   msg:
-    NoDirectivesFound: Non ho trovato direttive in ''%{0}'', così non ho fatto niente.
+    NoDirectivesFound: Non ho trovato direttive in "%{file}", così non ho fatto niente.
       È proprio quello che volevi?
-    SpecialThanks: Un ringraziamento speciale va a Alan Munn, Andrew Stacey, Brent
-      Longborough, Christopher Hughes, Clemens Niederberger, David Carlisle, Enrico
-      Gregorio, Francesco Endrici, Gonzalo Medina, Harish Kumar, Heiko Oberdiek, İlhan
-      Polat, Joseph Wright, Marco Daniel, Mikaël Maunier, Nicola Talbot, Patrick Gundlach,
-      Rasmus Roulund, Sergey Ulyanov, Stefan Kottwitz e molti altri che hanno reso
-      possibile la realizzazione di questo umile strumento.
+    SpecialThanks: Un ringraziamento speciale va a %{contributors} e molti altri che
+      hanno reso possibile la realizzazione di questo umile strumento.
     RunningCommand: Sto eseguendo %{0}...
     Success: SUCCESSO
     Failure: FALLIMENTO
@@ -47,110 +45,110 @@ it:
     Problem: 'Problema: %{0}'
     ErrorLocation: Ho trovato un errore alla riga %{0}, colonna %{1}.
   error:
-    FileDoesNotExistWithExtensionsList: Splacente, ma il file ''%{0} %{1}'' non esiste.
+    FileDoesNotExistWithExtensionsList: Splacente, ma il file "%{0} %{1}" non esiste.
       Osserva che quando inserisci solo il nome proprio (cioè il nome del file senza
-      estensione) o il nome con un''estensione sconosciuta, arara cercherà un file
-      che termini con le estensioni predefinite %{1} in quest''ordine. È possibile
-      modificare l''ordine, lo schema di ricerca e anche abilitare nuove estensioni
-      agendo sul file di configurazione. Consulta il manuale di arara per saperne
+      estensione) o il nome con un"estensione sconosciuta, macaw cercherà un file
+      che termini con le estensioni predefinite %{1} in quest"ordine. È possibile
+      modificare l"ordine, lo schema di ricerca e anche abilitare nuove estensioni
+      agendo sul file di configurazione. Consulta il manuale di macaw per saperne
       di più.
-    FileDoesNotExist: Il file ''%{0}'' non esiste.
-    CommandNotFound: "\\nMi dispiace, ma il comando chiesto dal compito ''%{0}'' non
-      è stato trovato. Assicurati che il comando ''%{1}'' sia corretto e accessibile
-      dal ''path'' di sistema."
+    FileDoesNotExist: Il file "%{file}" non esiste.
+    CommandNotFound: |2-
+
+      Mi dispiace, ma il comando chiesto dal compito "%{0}" non è stato trovato. Assicurati che il comando "%{1}" sia corretto e accessibile dal "path" di sistema.
     InvalidYAMLConfigurationFile: 'Mi dispiace, ma sembra che il file di configurazione
-      di arara non sia valido, cioè che abbia istruzioni YAML mancanti o scorrette.
-      Sfortunatamente arara non può andare oltre finché l''errore non viene corretto.
+      di macaw non sia valido, cioè che abbia istruzioni YAML mancanti o scorrette.
+      Sfortunatamente macaw non può andare oltre finché l''errore non viene corretto.
       Ho fatto del mio meglio registrando il messaggio di errore che è questo:'
     InvalidConfigurationFile: Oh, oh! Il file di configurazione non sembra valido.
-      Assicurati che sia un file YAML corretto. Sfortunatamente arara non può andare
+      Assicurati che sia un file YAML corretto. Sfortunatamente macaw non può andare
       oltre finché non trova un file di configurazione corretto.
     InvalidLanguageConfigurationFile: 'Houston, abbiamo un problema. Spiacente, la
-      lingua impostata nel file di configurazione non è valida. Attualmente arara
-      comprende le seguenti lingue: %{0}. Assicurati di scegliere una lingua della
-      lista o togli quella sbagliata dal file di configurazione (la lingua è facoltativa),
-      altrimenti arara non può andare oltre.'
+      lingua impostata nel file di configurazione non è valida. Attualmente macaw
+      comprende le seguenti lingue: %{languages}. Assicurati di scegliere una lingua
+      della lista o togli quella sbagliata dal file di configurazione (la lingua è
+      facoltativa), altrimenti macaw non può andare oltre.'
     InvalidFiletypesConfigurationFile: 'Spiacente, ma sembra che il file di configurazione
       abbia tipi di file personalizzati senza che siano stati definiti un''estensione
       o uno schema: entrambi sono richiesti per poter continuare. Per favore, correggi
       l''errore nel file di configurazione e riprova.'
     PathRuntimeErrorConfigurationFile: 'Spiacente, ma uno degli elementi nel percorso
       di ricerca indicato nel file di configurazione usa una variabile non disponibile
-      in questo contesto: ''''%{0}'''''
+      in questo contesto: "%{0}"'
     PathIOErrorConfigurationFile: Spiacente, ma uno degli elementi nel percorso di
       ricerca indicato nel file di configurazione ha una struttura gerarchica malformata.
       Puoi darci un'occhiata?
     InvalidYAMLDirective: 'Sembra che ci sia una direttiva malformata alla riga %{0},
       cioè una direttiva con un errore di sintassi YAML oppure un campo non valido.
       Ho fatto del mio meglio registrando il messaggio di errore che è questo:'
-    DirectiveEmptyCurlyBrackets: La direttiva ''%{0}'' alla riga %{1} non ha nulla
-      tra le graffe. Osserva che arara preferisce una sintassi più snella quando una
-      direttiva non ha parametri. Per correggere, è sufficiente togliere le graffe
-      o inserire un argomento per la direttiva.
-    DirectiveInvalidArgumentList: La direttiva ''%{0}'' alla riga %{1} ha un argomento
-      di tipo non valido. L''argomento ''%{2}'' è una parola chiave riservata di arara
+    DirectiveEmptyCurlyBrackets: La direttiva "%{0}" alla riga %{1} non ha nulla tra
+      le graffe. Osserva che macaw preferisce una sintassi più snella quando una direttiva
+      non ha parametri. Per correggere, è sufficiente togliere le graffe o inserire
+      un argomento per la direttiva.
+    DirectiveInvalidArgumentList: La direttiva "%{0}" alla riga %{1} ha un argomento
+      di tipo non valido. L"argomento "%{2}" è una parola chiave riservata di macaw
       che richiede sempre una lista.
-    DirectiveReservedKeyword: La direttiva ''%{0}'' alla riga %{1} ha un nome di argomento
-      non valido. Il nome ''%{2}'' è una parola chiave riservata di arara che rappresenta
-      tutti gli elementi della lista ''%{3}''. Per favore, scegli un nome diverso
-      per quell''argomento.
-    DirectiveListError: La direttiva ''%{0}'' alla riga %{1} ha un tipo di argomento
-      non valido. Solo gli argomenti ''files'' e ''items'' possono contenere una lista.
-      Entrambi sono parole chiave riservate di arara.
+    DirectiveReservedKeyword: La direttiva "%{0}" alla riga %{1} ha un nome di argomento
+      non valido. Il nome "%{2}" è una parola chiave riservata di macaw che rappresenta
+      tutti gli elementi della lista "%{3}". Per favore, scegli un nome diverso per
+      quell"argomento.
+    DirectiveListError: La direttiva "%{0}" alla riga %{1} ha un tipo di argomento
+      non valido. Solo gli argomenti "files" e "items" possono contenere una lista.
+      Entrambi sono parole chiave riservate di macaw.
     InvalidDirective: Sembra che ci sia una direttiva non valida alla riga %{0}. Dacci
-      un''occhiata e correggi.
-    DirectiveGenericError: La direttiva ''%{0}'' alla riga %{1} sembra malformata.
-      Potrebbe essere un errore di sintassi YAML o un''assegnazione sbagliata.
+      un"occhiata e correggi.
+    DirectiveGenericError: La direttiva "%{0}" alla riga %{1} sembra malformata. Potrebbe
+      essere un errore di sintassi YAML o un"assegnazione sbagliata.
     InvalidLanguage: 'Spiacente, ma questo codice di lingua non è valido. Attualmente
-      arara comprende le seguenti lingue:'
-    RuleNotFound: Oh, oh! Non sono riuscito a trovare la regola ''%{0}'' nel percorso
+      macaw comprende le seguenti lingue:'
+    RuleNotFound: Oh, oh! Non sono riuscito a trovare la regola "%{0}" nel percorso
       di ricerca. Puoi controllare che il nome della regola sia giusto e che la regola
       sia accessibile nel percorso di ricerca?
-    InvalidYAMLRule: 'Sembra che il compito ''''%{0}'''' abbia un errore di sintassi
-      YAML o un campo non valido. Puoi dare un''''occhiata al file ''''%{0}.yaml''''
-      che si trova in ''''%{1}''''? Ho fatto del mio meglio registrando il messaggio
-      di errore che è questo:'
-    InvalidRule: Oh, oh! Il compito ''%{0}'' sembra non valido. Assicurati che il
-      file ''%{0}.yaml'' che si trova in ''%{1}'' sia un file YAML corretto.
-    EmptyIdentifierRule: C''è un problema nell''eseguire ''%{0}''. Il file ''%{0}.yaml''
-      che si trova in ''%{1}'' richiede un identificatore valido. Puoi correggerlo?
-    EmptyNameRule: C''è un problema nell''eseguire ''%{0}''. Il file ''%{0}.yaml''
-      che si trova in ''%{1}'' richede un nome valido. Puoi correggerlo?
-    ForbiddenIdentifierRule: Oh, oh! Il compito ''%{0}'' (riferito al file ''%{0}.yaml''
-      che si trova in ''%{1}'') ha un identificatore di argomento non valido. ''%{2}''
+    InvalidYAMLRule: 'Sembra che il compito "%{0}" abbia un errore di sintassi YAML
+      o un campo non valido. Puoi dare un"occhiata al file "%{0}.yaml" che si trova
+      in "%{1}"? Ho fatto del mio meglio registrando il messaggio di errore che è
+      questo:'
+    InvalidRule: Oh, oh! Il compito "%{0}" sembra non valido. Assicurati che il file
+      "%{0}.yaml" che si trova in "%{1}" sia un file YAML corretto.
+    EmptyIdentifierRule: C"è un problema nell"eseguire "%{0}". Il file "%{0}.yaml"
+      che si trova in "%{1}" richiede un identificatore valido. Puoi correggerlo?
+    EmptyNameRule: C"è un problema nell"eseguire "%{0}". Il file "%{0}.yaml" che si
+      trova in "%{1}" richede un nome valido. Puoi correggerlo?
+    ForbiddenIdentifierRule: Oh, oh! Il compito "%{0}" (riferito al file "%{0}.yaml"
+      che si trova in "%{1}") ha un identificatore di argomento non valido. "%{2}"
       è una parola chiave riservata e non può essere usato. Puoi scegliere un altro
       nome?
-    EmptyArgumentsListRule: 'C''''è un problame nell''''eseguire ''''%{0}''''. Il
-      file ''''%{0}.yaml'''' che si trova in ''''%{1}'''' richiede una lista di argomenti
-      valida. Puoi correggerlo? Nota che la lista di argomenti può anche essere vuota,
-      ma è comunque necessario definirla esplicitamente (con ''''arguments: []'''').'
-    WrongIdentifierRule: Oh, oh! Il compito ''%{0}'' (riferito al file ''%{0}.yaml''
-      che si trova in ''%{1}'') ha un identificatore sbagliato; mi aspettavo ''%{0}''
-      e non ''%{2}''. Puoi correggerlo?
-    ArgumentsNotDefinedInRule: 'Oh, no! Alcuni argomenti usati nella direttiva ''''%{0}''''
-      non sono definiti nella regola ''''%{0}.yaml'''' che si trova in ''''%{1}''''.
-      Puoi rimuoverli dalla direttiva ''''%{0}'''' oppure aggiungerli alla lista di
-      argomenti nella regola ''''%{0}.yaml''''. Eccoli: %{2}'
+    EmptyArgumentsListRule: 'C"è un problame nell"eseguire "%{0}". Il file "%{0}.yaml"
+      che si trova in "%{1}" richiede una lista di argomenti valida. Puoi correggerlo?
+      Nota che la lista di argomenti può anche essere vuota, ma è comunque necessario
+      definirla esplicitamente (con "arguments: []").'
+    WrongIdentifierRule: Oh, oh! Il compito "%{0}" (riferito al file "%{0}.yaml" che
+      si trova in "%{1}") ha un identificatore sbagliato; mi aspettavo "%{0}" e non
+      "%{2}". Puoi correggerlo?
+    ArgumentsNotDefinedInRule: 'Oh, no! Alcuni argomenti usati nella direttiva "%{0}"
+      non sono definiti nella regola "%{0}.yaml" che si trova in "%{1}". Puoi rimuoverli
+      dalla direttiva "%{0}" oppure aggiungerli alla lista di argomenti nella regola
+      "%{0}.yaml". Eccoli: %{2}'
     DefaultValueRuntimeErrorRule: 'Spiacente, ma il valore di default impostato per
-      l''''argomento ''''%{0}'''' del compito ''''%{1}'''' (riferito al file ''''%{1}.yaml''''
-      che si trova in ''''%{2}'''') usa un metodo o una variabile che non è disponibile
-      nel contesto della regola: ''''%{3}'''''
-    FlagRuntimeErrorRule: 'Spiacente, ma il segnale (flag) impostato per l''''argomento
-      ''''%{0}'''' del compito ''''%{1}'''' (riferito al file ''''%{1}.yaml'''' che
-      si trova in ''''%{2}'''') vuole un metodo o una variabile che non è disponibile
-      nel contesto della regola: ''''%{3}'''''
-    DuplicatedCommandElementsRule: Oh, oh! Entrambi i campi ''command'' e ''commands''
-      sono impostati per il compito ''%{0}'' (riferito al file ''%{0}.yaml'' che si
-      trova in ''%{1}''). Si può adoperarne solo uno. Se il compito richiede a un
-      solo comando, scegli ''command''; se la regola richiede più comandi, forse il
-      campo ''commands'' è più adatto.
-    MissingCommandElementsRule: Oh, oh! Il compito ''%{0}'' (riferito al file ''%{0}.yaml''
-      che si trova in ''%{1}'') non ha né il campo ''command'' né ''commands''. Occorre
-      usare uno (solo) di essi. Se il compito richiede un solo comando, scegli ''command'';
-      se la regola richiede più comandi, forse il campo ''commands'' è più adatto.
-    CommandRuntimeErrorRule: 'Spiacente, ma il comando impostato per il compito ''''%{0}''''
-      task (riferito al file ''''%{0}.yaml'''' che si trova in ''''%{1}'''') usa un
-      metodo o una variabile non disponibile nel contesto della regola: ''''%{2}'''''
+      l"argomento "%{0}" del compito "%{1}" (riferito al file "%{1}.yaml" che si trova
+      in "%{2}") usa un metodo o una variabile che non è disponibile nel contesto
+      della regola: "%{3}"'
+    FlagRuntimeErrorRule: 'Spiacente, ma il segnale (flag) impostato per l"argomento
+      "%{0}" del compito "%{1}" (riferito al file "%{1}.yaml" che si trova in "%{2}")
+      vuole un metodo o una variabile che non è disponibile nel contesto della regola:
+      "%{3}"'
+    DuplicatedCommandElementsRule: Oh, oh! Entrambi i campi "command" e "commands"
+      sono impostati per il compito "%{0}" (riferito al file "%{0}.yaml" che si trova
+      in "%{1}"). Si può adoperarne solo uno. Se il compito richiede a un solo comando,
+      scegli "command"; se la regola richiede più comandi, forse il campo "commands"
+      è più adatto.
+    MissingCommandElementsRule: Oh, oh! Il compito "%{0}" (riferito al file "%{0}.yaml"
+      che si trova in "%{1}") non ha né il campo "command" né "commands". Occorre
+      usare uno (solo) di essi. Se il compito richiede un solo comando, scegli "command";
+      se la regola richiede più comandi, forse il campo "commands" è più adatto.
+    CommandRuntimeErrorRule: 'Spiacente, ma il comando impostato per il compito "%{0}"
+      task (riferito al file "%{0}.yaml" che si trova in "%{1}") usa un metodo o una
+      variabile non disponibile nel contesto della regola: "%{2}"'
     XMLFileNotFound: ''
     XMLBadEncoding: ''
     XMLMalformedFile: ''
