--- a/lib/macaw/i18n/tr.yml
+++ b/lib/macaw/i18n/tr.yml
@@ -1,21 +1,23 @@
 ---
 tr:
+  "\uFEFF#":
+    ! '': macaw, the cool TeX automation tool
   log:
     WelcomeMessage: ''
-    ProcessingFile: Dosya ''%{0}'' işleniyor, biraz bekletecegim.
+    ProcessingFile: Dosya "%{file}" işleniyor, biraz bekletecegim.
     Done: Hazır.
-    ExceptionRaised: 'arara bir istisna farketti ve şöyle dedi:'
+    ExceptionRaised: 'macaw bir istisna farketti ve şöyle dedi:'
     ReadyToRunCommands: Komutlar icin beklemede.
-    CommandName: "''%{0}'' komutu yerine getiriliyor."
+    CommandName: '"%{0}" komutu yerine getiriliyor.'
     Command: 'Komut: %{0}'
-    CommandSuccess: "''%{0}'' başarıyla yerine getirildi."
-    CommandFailure: "''%{0}'' hata durumu bildirdi."
+    CommandSuccess: '"%{0}" başarıyla yerine getirildi.'
+    CommandFailure: '"%{0}" hata durumu bildirdi.'
     AllCommandsSuccess: Tüm komutlar başarıyla yerine getirildi.
     OutputLogging: 'Kayıt Çıktısı:'
-    CommandNotFound: "''%{0}'' komutuna giden uygun bir yol bulunamadı. Deneme: %{1}"
+    CommandNotFound: '"%{0}" komutuna giden uygun bir yol bulunamadı. Deneme: %{1}'
     DirectiveFound: Satır %{1} üzerinde %{0} yönergesi bulundu.
-    RuleFound: "''%{1}'' de/da ''%{0}'' görevi bulundu."
-    NoDirectivesFound: "''%{0}'' dosyasında hiçbir yönerge bulunamadı."
+    RuleFound: '"%{1}" de/da "%{0}" görevi bulundu.'
+    NoDirectivesFound: '"%{0}" dosyasında hiçbir yönerge bulunamadı.'
   help:
     Version: uygulama sürümünü yazdırır
     Help: yardım iletisini yazdırır
@@ -25,18 +27,16 @@ tr:
     Language: uygulama dilini ayarlar
     DryRun: ''
     MaximumNumberOfLoops: ''
+    Usage: Usage
+    Progress: Print dots to mark progress
   header:
     Slogan: "Şahane TeX otomasyon aracı"
     AllRightsReserved: Tüm hakları saklıdır.
   msg:
-    NoDirectivesFound: Ben ''%{0}'' dosyasında hiçbir yönerge bulamadım, nedenle bir
-      şey yapmadım. Gerçekten istediğin bu mu?
-    SpecialThanks: Alan Munn, Andrew Stacey, Brent Longborough, Christopher Hughes,
-      Clemens Niederberger, David Carlisle, Enrico Gregorio, Francesco Endrici, Gonzalo
-      Medina, Harish Kumar, Heiko Oberdiek, İlhan Polat, Joseph Wright, Marco Daniel,
-      Mikaël Maunier, Nicola Talbot, Patrick Gundlach, Rasmus Roulund, Sergey Ulyanov,
-      Stefan Kottwitz, ve diğerlerine bu mütevazi aracı mümkün kıldıkları için çok
-      teşekkürler.
+    NoDirectivesFound: Ben "%{file}" dosyasında hiçbir yönerge bulamadım, nedenle
+      bir şey yapmadım. Gerçekten istediğin bu mu?
+    SpecialThanks: "%{contributors}, ve diğerlerine bu mütevazi aracı mümkün kıldıkları
+      için çok teşekkürler."
     RunningCommand: "%{0} yerine getiriliyor..."
     Success: BAŞARILI
     Failure: BAŞARISIZ
@@ -46,100 +46,100 @@ tr:
     Problem: 'Sorun: %{0}'
     ErrorLocation: "%{0}. satır, %{1}. sütunda hata bulundu."
   error:
-    FileDoesNotExistWithExtensionsList: "Üzgünüm ama ''%{0} %{1}'' diye bir dosya
-      yok. Ancak, uzantısı olmayan (veya bilinmeyen bir uzantısı olan) dosya adını
-      girdiğinde, arara sırasıyla %{1} uzantılarını bulmayı dener. Elbette bu sırayı
-      geçersiz kılmak, değiştirmek hatta yeni uzantılar ekleyebilmek mümkün. Bu özellik
-      hakkında daha fazla bilgi edinmek için arara kılavuzuna bakın."
-    FileDoesNotExist: "''%{0}'' diye bir dosya yok."
-    CommandNotFound: "\\nÜzgünüm ama ''%{0}'' görevindeki komutu bulunamadı. ''%{1}''
-      \ komutunun doğru veya sistem yolu ile erişilebilir olduğundan emin misin?"
-    InvalidYAMLConfigurationFile: "Üzgünüm, ama görünüşe göre arara yapılandırma dosyası
+    FileDoesNotExistWithExtensionsList: Üzgünüm ama "%{0} %{1}" diye bir dosya yok.
+      Ancak, uzantısı olmayan (veya bilinmeyen bir uzantısı olan) dosya adını girdiğinde,
+      macaw sırasıyla %{1} uzantılarını bulmayı dener. Elbette bu sırayı geçersiz
+      kılmak, değiştirmek hatta yeni uzantılar ekleyebilmek mümkün. Bu özellik hakkında
+      daha fazla bilgi edinmek için macaw kılavuzuna bakın.
+    FileDoesNotExist: '"%{file}" diye bir dosya yok.'
+    CommandNotFound: |2-
+
+      Üzgünüm ama "%{0}" görevindeki komutu bulunamadı. "%{1}"  komutunun doğru veya sistem yolu ile erişilebilir olduğundan emin misin?
+    InvalidYAMLConfigurationFile: "Üzgünüm, ama görünüşe göre macaw yapılandırma dosyası
       geçersiz, daha doğrusu geçersiz veya eksik YAML girişleri barındırıyor. Maalesef,
-      arara bu hata giderilene kadar devam edemeyecek. Elimden geldiğince, şöyle bir
+      macaw bu hata giderilene kadar devam edemeyecek. Elimden geldiğince, şöyle bir
       hata dökümü çıkarttım:"
     InvalidConfigurationFile: Tüh, yapılandırma dosyası geçersiz görünüyor. Uygun
       bir YAML dosyası olduğundan emin misin? Uygun bir yapılandırma dosyası girilene
-      kadar maalesef arara devam edemeyecek.
+      kadar maalesef macaw devam edemeyecek.
     InvalidLanguageConfigurationFile: 'Houston, bir sorun var. Ne yazık ki, yapılandırma
-      dosyasında ayarlanan dil geçerli değil. Şu anda, arara şu dilleri destekliyor:
-      %{0}. Anlayabildiğim bir dil seçin ya da yapılandırma dosyasından bu (isteğe
-      bağlı) girişi kaldırın, aksi takdirde arara devam edemeyecek.'
+      dosyasında ayarlanan dil geçerli değil. Şu anda, macaw şu dilleri destekliyor:
+      %{languages}. Anlayabildiğim bir dil seçin ya da yapılandırma dosyasından bu
+      (isteğe bağlı) girişi kaldırın, aksi takdirde macaw devam edemeyecek.'
     InvalidFiletypesConfigurationFile: "Üzgünüm ama görünüşe göre yapılandırma dosyasında
       ne desen tanımı olan ne de uzantısı bilinen özelleştirilmiş dosya tipleri var.
       Her iki bilgininde sağlanmış olması devam edebilmek için gerekli. Yapılandırma
       dosyasındaki bu hatayı düzeltin, ve tekrar deneyin."
-    PathRuntimeErrorConfigurationFile: "Üzgünüm ama yapılandırma dosyasında arama
-      yolu girdilerinden birinde kullanılamayacak bir değişken var: ''%{0}''"
+    PathRuntimeErrorConfigurationFile: 'Üzgünüm ama yapılandırma dosyasında arama
+      yolu girdilerinden birinde kullanılamayacak bir değişken var: "%{0}"'
     PathIOErrorConfigurationFile: "Üzgünüm ama yapılandırma dosyasında arama yoluna
       girdilerinden birini hatalı biçimlendirilmiş bir dizin yapısı vardır. Benim
       için bir bakabilir misin?"
     InvalidYAMLDirective: 'Satır %{0} üzerinde bozuk, yani, YAML sözdizimi hatası
       veya geçersiz bir alanı olabilecek bir yönerge var gibi duruyor. Elimden geldiğince,
       şöyle bir hata dökümü çıkarttım:'
-    DirectiveEmptyCurlyBrackets: Satır %{1} üzerindeki ''%{0}'' yönergesinde boş küme
-      parantezleri buldum. arara yönergenin argümanları yoksa sade bir sözdizimi yapısını
+    DirectiveEmptyCurlyBrackets: Satır %{1} üzerindeki "%{0}" yönergesinde boş küme
+      parantezleri buldum. macaw yönergenin argümanları yoksa sade bir sözdizimi yapısını
       tercih eder. Bunu düzeltmek için, boş küme parantezlerini kaldırmak veya yönerge
       için argümanlar sunmak yeterli.
-    DirectiveInvalidArgumentList: Satır %{1} üzerinde ''%{0}'' yönergesi için geçersiz
-      bir argüman türü var. ''%{2}'' argümanı arara''ya özeldir her zaman bir liste
-      gerektirir.
-    DirectiveReservedKeyword: Satır %{1} üzerinde ''%{0}'' yönergesi için geçersiz
-      bir argüman türü var. ''%{2}'' kelimesi arara''ya ait ''%{3}'' listesinde her
-      elementi temsil eden özel bir kelimedir. Lütfen, başka bir kelime seçin.
-    DirectiveListError: Satır %{1} üzerinde ''%{0}'' yönergesi için geçersiz bir argüman
-      türü var. Sadece ''file'' ve ''items'' argümanları bir liste olabilir. Her ikisi
-      de arara''ya ait özel kelimelerdir.
+    DirectiveInvalidArgumentList: Satır %{1} üzerinde "%{0}" yönergesi için geçersiz
+      bir argüman türü var. "%{2}" argümanı macaw"ya özeldir her zaman bir liste gerektirir.
+    DirectiveReservedKeyword: Satır %{1} üzerinde "%{0}" yönergesi için geçersiz bir
+      argüman türü var. "%{2}" kelimesi macaw"ya ait "%{3}" listesinde her elementi
+      temsil eden özel bir kelimedir. Lütfen, başka bir kelime seçin.
+    DirectiveListError: Satır %{1} üzerinde "%{0}" yönergesi için geçersiz bir argüman
+      türü var. Sadece "file" ve "items" argümanları bir liste olabilir. Her ikisi
+      de macaw"ya ait özel kelimelerdir.
     InvalidDirective: Görünüşe göre, %{0}. satırda geçersiz bir yönerge var. Bir göz
       atıp düzeltin lütfen.
-    DirectiveGenericError: Satır %{1} üzerinde ''%{0}'' yönergesi bozuk gibi. YAML
-      sözdizimi hatası ya da yanlış bir eşleme olabilir.
+    DirectiveGenericError: Satır %{1} üzerinde "%{0}" yönergesi bozuk gibi. YAML sözdizimi
+      hatası ya da yanlış bir eşleme olabilir.
     InvalidLanguage: "Üzgünüm, ama seçtiğin dil kodu geçersiz. Şimdilik aşağıdaki
       dilleri konuşabiliyorum:"
-    RuleNotFound: Tüh, arama yolunda ''%{0}'' kuralını bulamadım. Kural arama yolu
-      üzerinden erişilebilir ise kural adının doğru olduğuna bakar mısın?
-    InvalidYAMLRule: "''%{0}'' görevi bir YAML sözdizimi hatası veya geçersiz bir
-      alan içeriyor gibi görünüyor. ''%{1}'' rdeki  ''%{0}.yaml'' dosyasına bir bakar
-      mısın? Elimden geldiğince, şöyle bir hata dökümü çıkarttım:"
-    InvalidRule: Tüh, ''%{0}'' görevi geçersiz görünüyor. ''%{1}'' de bulunan ''%{0}.yaml''
+    RuleNotFound: Tüh, arama yolunda "%{0}" kuralını bulamadım. Kural arama yolu üzerinden
+      erişilebilir ise kural adının doğru olduğuna bakar mısın?
+    InvalidYAMLRule: '"%{0}" görevi bir YAML sözdizimi hatası veya geçersiz bir alan
+      içeriyor gibi görünüyor. "%{1}" rdeki  "%{0}.yaml" dosyasına bir bakar mısın?
+      Elimden geldiğince, şöyle bir hata dökümü çıkarttım:'
+    InvalidRule: Tüh, "%{0}" görevi geçersiz görünüyor. "%{1}" de bulunan "%{0}.yaml"
       uygun bir YAML dosyası olduğundan emin misin?
-    EmptyIdentifierRule: "''%{0}'' görevinde bir sorun var. ''%{1}'' deki ''%{0}.yaml''
-      dosyası için geçerli bir tanımlayıcı gerek. Düzeltebilir misin?"
-    EmptyNameRule: "''%{0}'' görevinde bir sorun var. ''%{1}'' yer ''%{0}.yaml'' dosyası
-      için geçerli bir isim gerek. Düzeltebilir misin?"
-    ForbiddenIdentifierRule: Tüh, ''%{0}'' görevi (''%{1}'' deki ''%{0}.yaml'' dosyasına
-      atfen) geçersiz bir argüman tanımlayıcısı içeriyor. ''%{2}'' özel bir kelime,
+    EmptyIdentifierRule: '"%{0}" görevinde bir sorun var. "%{1}" deki "%{0}.yaml"
+      dosyası için geçerli bir tanımlayıcı gerek. Düzeltebilir misin?'
+    EmptyNameRule: '"%{0}" görevinde bir sorun var. "%{1}" yer "%{0}.yaml" dosyası
+      için geçerli bir isim gerek. Düzeltebilir misin?'
+    ForbiddenIdentifierRule: Tüh, "%{0}" görevi ("%{1}" deki "%{0}.yaml" dosyasına
+      atfen) geçersiz bir argüman tanımlayıcısı içeriyor. "%{2}" özel bir kelime,
       bu nedenle kullanılamaz. Başka bir isim kullanabilir misin?
-    EmptyArgumentsListRule: "''%{0}'' görevinde bir sorun var. ''%{1}'' deki ''%{0}.yaml''
+    EmptyArgumentsListRule: '"%{0}" görevinde bir sorun var. "%{1}" deki "%{0}.yaml"
       dosyası için geçerli bir argüman listesi gerek. Bunu düzeltebilir misin? Bu
-      arada, argümanlar listesi boş dahi olabilir, ama yine de ''arguments: []'' ile
-      belirtmek gerekiyor."
-    WrongIdentifierRule: Tüh, ''%{0}'' görevi (''%{1}'' deki ''%{0}.yaml'' dosyasına
-      atfen) yanlış bir tanımlayıcısı içeriyor - ''%{0}}'' yerine ''%{2}'' bekliyordum.
-      Bunu düzeltebilir misin?
-    ArgumentsNotDefinedInRule: "''%{0}'' yönergesinde, ''%{1}'' deki ''%{0}.yaml''
-      kuralı tarafından tanımlanmamış argümanları kullanıyor. Bunları ya ''%{0}''
-      yönergesinden kaldırabilirsin ya da ''%{0}.yaml'' kuralı argüman listesine ekleyebilirsin.
-      Bahsettiğim argümanlar şunlar: %{2}"
-    DefaultValueRuntimeErrorRule: "Üzgünüm ama ''%{1}'' görevinin ''%{0}'' argümanının
-      varsayılan değeri (''%{2}'' deki ''%{1}.yaml'' dosyasına atfen) kullanılamayan
-      bir değişken/yöntem içeriyor: ''%{3}''"
-    FlagRuntimeErrorRule: "Üzgünüm ama ''%{1}'' görevinin ''%{0}'' argüman imlecinde
-      (''%{2}'' deki ''%{1}.yaml'' dosyasına atfen) bu kural için kullanılamayan bir
-      değişken/yöntem var: ''%{3}''"
-    DuplicatedCommandElementsRule: Tüh, her iki ''command'' ve ''commands'' alanı
-      da ''%{0}'' görevinde (''%{1}'' deki ''%{0}.yaml'' dosyasına atfen) kullanılmaya
-      ayarlanmış. Sadece birinin seçilmiş olması gerekiyor. Eğer işlenecek görev sadece
-      bir komut içeriyorsa, ''command'' kullanabilirsin; birden fazla komut kullanımı
-      için ''commands'' daha uygun olacaktır.
-    MissingCommandElementsRule: her iki ''command'' ve ''commands'' alanı da ''%{0}''
-      görevinde (''%{1}'' deki ''%{0}.yaml'' dosyasına atfen) kullanılmaya ayarlanmış.
-      İkisinden birinin kullanılıyor olması gerekiyor. Eğer işlenecek görev sadece
-      bir komut içeriyorsa, ''command'' kullanabilirsin; birden fazla komut kullanımı
-      için ''commands'' daha uygun olacaktır.
-    CommandRuntimeErrorRule: "Üzgünüm ama ''%{0}'' görevi için belirlenmiş komut (''%{1}''
-      deki ''%{0}.yaml'' dosyasına atfen) bu kural için kullanılamayacak bir değişken/yöntem
-      içeriyor: ''%{2}''"
+      arada, argümanlar listesi boş dahi olabilir, ama yine de "arguments: []" ile
+      belirtmek gerekiyor.'
+    WrongIdentifierRule: Tüh, "%{0}" görevi ("%{1}" deki "%{0}.yaml" dosyasına atfen)
+      yanlış bir tanımlayıcısı içeriyor - "%{0}}" yerine "%{2}" bekliyordum. Bunu
+      düzeltebilir misin?
+    ArgumentsNotDefinedInRule: '"%{0}" yönergesinde, "%{1}" deki "%{0}.yaml" kuralı
+      tarafından tanımlanmamış argümanları kullanıyor. Bunları ya "%{0}" yönergesinden
+      kaldırabilirsin ya da "%{0}.yaml" kuralı argüman listesine ekleyebilirsin. Bahsettiğim
+      argümanlar şunlar: %{2}'
+    DefaultValueRuntimeErrorRule: 'Üzgünüm ama "%{1}" görevinin "%{0}" argümanının
+      varsayılan değeri ("%{2}" deki "%{1}.yaml" dosyasına atfen) kullanılamayan bir
+      değişken/yöntem içeriyor: "%{3}"'
+    FlagRuntimeErrorRule: 'Üzgünüm ama "%{1}" görevinin "%{0}" argüman imlecinde ("%{2}"
+      deki "%{1}.yaml" dosyasına atfen) bu kural için kullanılamayan bir değişken/yöntem
+      var: "%{3}"'
+    DuplicatedCommandElementsRule: Tüh, her iki "command" ve "commands" alanı da "%{0}"
+      görevinde ("%{1}" deki "%{0}.yaml" dosyasına atfen) kullanılmaya ayarlanmış.
+      Sadece birinin seçilmiş olması gerekiyor. Eğer işlenecek görev sadece bir komut
+      içeriyorsa, "command" kullanabilirsin; birden fazla komut kullanımı için "commands"
+      daha uygun olacaktır.
+    MissingCommandElementsRule: her iki "command" ve "commands" alanı da "%{0}" görevinde
+      ("%{1}" deki "%{0}.yaml" dosyasına atfen) kullanılmaya ayarlanmış. İkisinden
+      birinin kullanılıyor olması gerekiyor. Eğer işlenecek görev sadece bir komut
+      içeriyorsa, "command" kullanabilirsin; birden fazla komut kullanımı için "commands"
+      daha uygun olacaktır.
+    CommandRuntimeErrorRule: 'Üzgünüm ama "%{0}" görevi için belirlenmiş komut ("%{1}"
+      deki "%{0}.yaml" dosyasına atfen) bu kural için kullanılamayacak bir değişken/yöntem
+      içeriyor: "%{2}"'
     XMLFileNotFound: ''
     XMLBadEncoding: ''
     XMLMalformedFile: ''
